ubuntu-docs (9.04.8) jaunty; urgency=low

  * [Jordan Mantha]
    - Add Conflicts on edubuntu-docs (<< 9.04.1ubuntu1) LP: #353288

  * [Matthew East]
    - Remove es_ES and es_PR locales (LP: #348855)

 -- Matthew East <mdke@ubuntu.com>  Fri, 03 Apr 2009 21:19:27 +0100

ubuntu-docs (9.04.7) jaunty; urgency=low

  * debian/ubuntu-docs.postinst - Fix syntax error with previous release (LP: #353117)
  * refreshing translations from Rosetta

 -- Matthew East <mdke@ubuntu.com>  Wed, 01 Apr 2009 14:21:14 +0100

ubuntu-docs (9.04.6) jaunty; urgency=low

  * Remove deprecated directory at /usr/share/gnome/help/libs (LP: #303578)
    - Thanks to Steve Langasek for the fix

 -- Matthew East <mdke@ubuntu.com>  Mon, 30 Mar 2009 18:09:05 +0100

ubuntu-docs (9.04.5) jaunty; urgency=low

  * String freeze release

  * [Matthew East]
    - Updating logout and shutdown instructions for Jaunty (User Switcher, not System menu)
    - musicvideophotos.xml - use consistent language for extracting audio cds (LP: #346245)
    - musicvideophotos.xml - use direct link to brasero manual
    - Make titles of documents in yelp indexes match the title of the documents themselves (LP: #345852)
    - Refresh pot templates

  * [Dougie Richardson]
    - basic-commands.xml - paste instructions correction (LP: #341534)
    - internet/troubleshooting.xml - changing bad wording
    - video.xml - dvd support requires gstreamer-ugly (LP: #338321)
    - connecting.xml - modem instructions (LP: #310331)

  * [Adam Sommer] - Server Guide
    - Updated OpenLDAP section for new /etc/default/slapd configuration.
    - Added instructions for setting correct ACL for the Kerberos keys.
    - virtualization.xml - new Eucalyptus and OpenNebula sections
    - installation.xml:
      * rewrite of Extending Volume Groups section (LP: #347201, LP: #346862, and LP: #346859)
      * Updates for Jaunty.
    - security.xml:
      * Updated Firewall section for Jaunty.