@@ -21,7 +21,6 @@
 		<listitem><para>Rhythmbox can't rip MP3, see <xref linkend="music-missingmetadata" /></para></listitem>
 		<listitem><para>My MP3 player works in Windows but not in Ubuntu, see <xref linkend="music-portable-mtp" /></para></listitem>
 		<listitem><para>I cant play videos, see <xref linkend="video-dvd" /></para></listitem>
-		<listitem><para>I can't find menus on dvd, see <xref linkend="video-dvdmenus" /></para></listitem>
 		<listitem><para>I can't play Quicktime or WMV, see <xref linkend="video-playback-file" /></para></listitem>
 		<listitem><para>I can't play flash video, see <xref linkend="video-playback-flash" /></para></listitem>
 		<listitem><para>I can't play Realmedia, see <xref linkend="video-realplayer" /></para></listitem>
