@@ -66,25 +66,6 @@
             </step>
         </procedure>
     
-		<sect2 id="video-dvdmenus" status="review">
-			<title>Where have the menus on my DVDs gone?</title>
-			<para>
-			DVD menus are not currently supported by the default Movie Player. To 
-			be able to use the menus on a disc, you must install an alternative 
-			movie player such as <ulink url="apt:gxine">gxine</ulink> or 
-			<ulink url="apt:vlc">VLC</ulink>.
-			</para>
-			<para>
-			To make DVDs automatically play in the alternative movie player when 
-			inserted, open &home-folder;, click 
-			<menuchoice>
-				<guimenu>Edit</guimenu>
-				<guimenuitem>Preferences</guimenuitem>
-			</menuchoice> and then click the <guilabel>Media</guilabel> tab. 
-			Select the alternative player from the <guibutton>DVD Video</guibutton> 
-			list.
-			</para>
-		</sect2>
     </sect1>
     
     <sect1 id="video-playback" status="review">
