@@ -5,6 +5,7 @@ ubuntu-docs (9.04.8) jaunty; urgency=low
 
   * [Matthew East]
     - Remove es_ES and es_PR locales (LP: #348855)
+    - Removing strings about totem not being able to support DVD menus (LP: #354777)
 
  -- Matthew East <mdke@ubuntu.com>  Fri, 03 Apr 2009 21:19:27 +0100
 
